fix: consistency between form and list page

--- a/LiveMapDashboard.Web/Views/Shared/Components/MapForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/MapForm/Default.cshtml
@@ -17,9 +17,9 @@
     {
         ModalId = deleteModalId,
         ModalTitle = $"Delete Map: {Model.Name}",
-        WarningMessage = "This action is not reversible, so please continue with caution.",
         FormController = "Map",
         FormAction = "Delete",
+        DangerMessage = "WARNING: Permanently remove the map and all of its contents, including: points of interest and requests for change. This action is irreversible. Are you sure you want to continue?",
         HiddenInputs = new Dictionary<string, string>
         {
             { "Id", Model.Id }
