--- a/LiveMapDashboard.Web/Views/Shared/Components/MapForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/MapForm/Default.cshtml
@@ -125,22 +125,22 @@
 
             <div class="mt-1 p-4 relative z-10 bg-white border border-gray-200 rounded-xl sm:mt-4 dark:bg-neutral-900 dark:border-neutral-700">
                 <label class="text-sm font-medium text-gray-700 block mb-1 dark:text-gray-200">Map geo coordinates</label>
-                <p class="text-xs text-gray-500 dark:text-gray-400">In order to set the location of the given map image, the exact bottom and top coordinates are needed. With this the map can be an accurate representation  </p>
+                <p class="text-xs text-gray-500 dark:text-gray-400">In order to set the location of the given map image and its bounds, the exact bottom and top coordinates are needed. With this the map can be optimized for the user's experience. </p>
             
                 <div class="flex pt-4">
                     @Html.EditorFor(m => m.TopLeft, new ViewDataDictionary(ViewData) {
-                        { "12", "34" }
+                        { "Label", "Top left" }
                     })
                     @Html.EditorFor(m => m.TopRight, new ViewDataDictionary(ViewData) {
-                        { "12", "34" }
+                        { "Label", "Top right" }
                     })
                 </div>
                 <div class="flex pt-2">
                     @Html.EditorFor(m => m.BottomLeft, new ViewDataDictionary(ViewData) {
-                        { "12", "34" }
+                        { "Label", "Bottom left" }
                     })
                     @Html.EditorFor(m => m.BottomRight, new ViewDataDictionary(ViewData) {
-                        { "12", "34" }
+                        { "Label", "Bottom right" }
                     })
                 </div>
             </div>
