Feat/#52 Map CU & D  (#117)
* initial code does nothing

* working

* Feat/#52 #80: Map Backend CU (#99)

* feat: Setup CU for Map

* feat: Post for Map

* feat: Update for Map

* fix: Removal of POI inclusion

* fix: Changed Map dataobject. Added Bounds and ImageUrl

* pre-pull

* basis werkend

* ehhhh

* gotta eat

* aaa

* fix: small fixes, not most ideal!

* fix(WIP): Fix cultural invariation in the javascript.

* fix: Fix map update coordinate values not submitting. Please make sure that you keep track of cultural invarience while rendering numbers

* changes

* fix

* laatste fix

* Map boundaries can be saved partyy

* cleanup

* final fixes

* fixes

* fixed from Emre

* oopsiee

* fixes so far

* final fixes

* park to map

* Feat/#53 Delete Map (#107)

* feat: start for delete request

* feat: Delete works

* fix: Optimized delete method

* extra: Added setup for HttpService

* feat: Add list and delete button to dashboard

* fix: small cleanup

* fix: consistency between form and list page

* fix: Simplified Delete Handler returns

* fix: Remove log message from park boundaries drawing method

* fix: Replaced other log messages from map drawing javascript

* fix: Map form default page adjusted bound fields

* fix: Default culture set. Fixes decimal number bug

* fix: Place marker fix

* fix: Comments processed

---------

Co-authored-by: JrnJ <jeroenjochems@outlook.com>
Co-authored-by: Jeroen <60579554+JrnJ@users.noreply.github.com>
Co-authored-by: Karim <115158216+karimdiabb@users.noreply.github.com>
Co-authored-by: ThomasRuijters <thomas.ruijters@gmail.com>
Co-authored-by: ThomasRuijters <83541740+ThomasRuijters@users.noreply.github.com>

--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
@@ -190,5 +190,5 @@
             </div>
         </div>
     </form>
-    <script src="~/js/poi.js" asp-append-version="true" type="module"></script>
+    <script src="~/js/preview-image.js" asp-append-version="true" type="module"></script>
 }
