--- a/LiveMapDashboard.Web/Views/Shared/EditorTemplates/Coordinate.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/EditorTemplates/Coordinate.cshtml
@@ -8,8 +8,8 @@
 
     var longitude = Model.Longitude.ToString(System.Globalization.CultureInfo.InvariantCulture);
     var latitude = Model.Latitude.ToString(System.Globalization.CultureInfo.InvariantCulture);
-    // var minValue = ViewData["MinValue"] as double?;
-    // var maxValue = ViewData["MaxValue"] as double?;
+
+    var isReadonly = ViewData["Readonly"] as bool? ?? false;
 }
 
 <div class="mb-4">
@@ -29,7 +29,8 @@
                    type="number" 
                    step="any"
                    value="@(longitude)"
-                   class="border py-2 px-3 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"  />
+                   @(isReadonly ? "readonly" : "")
+                   class="border py-2 px-3 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 @(isReadonly ? "bg-gray-300 cursor-not-allowed opacity-50" : "") disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600" />
         </div>
         <div>
             <label for="@(fullFieldName)-latitude" class="block text-xs font-medium text-gray-600 dark:text-gray-300 mb-1">
@@ -39,7 +40,8 @@
                    type="number" 
                    step="any"
                    value="@(latitude)"
-                   class="border py-2 px-3 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"  />
+                   @(isReadonly ? "readonly" : "")
+                   class="border py-2 px-3 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 @(isReadonly ? "bg-gray-300 cursor-not-allowed opacity-50" : "") disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600" />
         </div>
     </div>
     
