--- a/LiveMapDashboard.Web/Views/Shared/Components/CategoryList/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/CategoryList/Default.cshtml
@@ -8,79 +8,92 @@
 
 @section TopBarActions
 {
-    <div class="py-4 flex justify-end">
-        <a asp-controller="category" asp-action="form" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
-            New Category
-        </a>
+    <div class="mb-5 pb-5 flex w-full justify-between items-center border-b border-gray-200 dark:border-neutral-700">
+        <div class="flex items-center gap-x-4">
+            <h2 class="text-2xl font-semibold text-gray-800 dark:text-neutral-200">
+                <span>Category overview</span>
+            </h2>
+        </div>
+
+        <div class="inline-flex gap-x-2">
+            <div class="text-center">
+                <a asp-controller="category" asp-action="form" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-hidden focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-plus-icon lucide-plus shrink size-4"><path d="M5 12h14"/><path d="M12 5v14"/></svg>
+                    New Category
+                </a>
+            </div>
+        </div>
     </div>
 }
 
 @section Content
 {
-    <div class="flex flex-col">
-        <div class="-m-1.5 overflow-x-auto">
-            <div class="p-1.5 min-w-full inline-block align-middle">
-                <div class="border border-gray-200 rounded-lg overflow-hidden dark:border-neutral-700">
-                    <table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
-                        <thead>
-                        <tr>
-                            <th scope="col"
-                                class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
-                                Name
-                            </th>
-                            <th scope="col"
-                                class="px-6 py-3 text-end text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
-                                Action
-                            </th>
-                        </tr>
-                        </thead>
-                        <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
-                        @foreach (
-                        var category in Model.Categories)
-                        {
-                        <tr>
-                            <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">
-                                @category.CategoryName
-                            </td>
-                            <td class="px-6 py-4 whitespace-nowrap text-end text-sm font-medium">
-                                <a asp-action="EditForm" asp-controller="category" asp-route-name="@category.CategoryName"
-                                   class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 focus:outline-hidden focus:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400 dark:focus:text-blue-400">
-                                    Edit
-                                </a>
+    <div class="max-w-10xl pt-2 px-4 sm:px-6 lg:px-6 lg:pt-2 mx-auto">
+        <div class="flex flex-col">
+            <div class="-m-1.5 overflow-x-auto">
+                <div class="p-1.5 min-w-full inline-block align-middle">
+                    <div class="border border-gray-200 rounded-lg overflow-hidden dark:border-neutral-700">
+                        <table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
+                            <thead>
+                            <tr>
+                                <th scope="col"
+                                    class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
+                                    Name
+                                </th>
+                                <th scope="col"
+                                    class="px-6 py-3 text-end text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
+                                    Action
+                                </th>
+                            </tr>
+                            </thead>
+                            <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
+                            @foreach (
+                            var category in Model.Categories)
+                            {
+                            <tr>
+                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">
+                                    @category.CategoryName
+                                </td>
+                                <td class="px-6 py-4 whitespace-nowrap text-end text-sm font-medium">
+                                    <a asp-action="EditForm" asp-controller="category" asp-route-name="@category.CategoryName"
+                                       class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 focus:outline-hidden focus:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400 dark:focus:text-blue-400">
+                                        Edit
+                                    </a>
 
-                                <button type="button" class="inline-flex items-center gap-x-2 pl-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 focus:outline-hidden focus:text-red-800 disabled:opacity-50 disabled:pointer-events-none dark:text-red-500 dark:hover:text-red-400 dark:focus:text-red-400" aria-haspopup="dialog" aria-expanded="false" aria-controls="delete-category-@category.CategoryName.Replace(' ', '-').ToLower()" data-hs-overlay="#delete-category-@category.CategoryName.Replace(' ', '-').ToLower()">
-                                    Delete
-                                </button>
-                            </td>
-                        </tr>
-                        }
-                        </tbody>
-                    </table>
+                                    <button type="button" class="inline-flex items-center gap-x-2 pl-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 focus:outline-hidden focus:text-red-800 disabled:opacity-50 disabled:pointer-events-none dark:text-red-500 dark:hover:text-red-400 dark:focus:text-red-400" aria-haspopup="dialog" aria-expanded="false" aria-controls="delete-category-@category.CategoryName.Replace(' ', '-').ToLower()" data-hs-overlay="#delete-category-@category.CategoryName.Replace(' ', '-').ToLower()">
+                                        Delete
+                                    </button>
+                                </td>
+                            </tr>
+                            }
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    @foreach (var category in Model.Categories)
-    {
-        var deleteModalModel = new DeleteModalViewModel
+        @foreach (var category in Model.Categories)
         {
-            ModalId = $"delete-category-{category.CategoryName.Replace(' ', '-').ToLower()}",
-            ModalTitle = $"Delete Category: {category.CategoryName}",
-            WarningMessage = "This action is not reversible, so please continue with caution.",
-            DangerMessage = category.InUse == true
-                ? "This category is in use by other points of interest. Removing it will update related points of interest to have the default category of 'empty'."
-                : null,
-            FormController = "Category",
-            FormAction = "Delete",
-            HiddenInputs = new Dictionary<string, string>
+            var deleteModalModel = new DeleteModalViewModel
             {
-                { "CategoryName", category.CategoryName },
-                { "NewValue", category.CategoryName },
-                { "IconName", category.IconName }
-            }
-        };  
+                ModalId = $"delete-category-{category.CategoryName.Replace(' ', '-').ToLower()}",
+                ModalTitle = $"Delete Category: {category.CategoryName}",
+                WarningMessage = "This action is not reversible, so please continue with caution.",
+                DangerMessage = category.InUse == true
+                    ? "This category is in use by other points of interest. Removing it will update related points of interest to have the default category of 'empty'."
+                    : null,
+                FormController = "Category",
+                FormAction = "Delete",
+                HiddenInputs = new Dictionary<string, string>
+                {
+                    { "CategoryName", category.CategoryName },
+                    { "NewValue", category.CategoryName },
+                    { "IconName", category.IconName }
+                }
+            };  
 
-        @await Html.PartialAsync("Components/CategoryForm/_DeleteModal", deleteModalModel)
-    }
+            @await Html.PartialAsync("Components/CategoryForm/_DeleteModal", deleteModalModel)
+        }
+    </div>
 }
