--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiList/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiList/Default.cshtml
@@ -6,90 +6,102 @@
 
 @section TopBarActions
 {
-    <div class="py-4 flex justify-end">
-        <a asp-controller="Poi" 
-           asp-action="PoiCreateForm" 
-           asp-route-mapId="@Model.MapId" 
-           class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
-           
-            New Point Of Interest
-        </a>
-    </div>    
+    <div class="mb-5 pb-5 flex w-full justify-between items-center border-b border-gray-200 dark:border-neutral-700">
+        <div class="flex items-center gap-x-4">
+            <h2 class="text-2xl font-semibold text-gray-800 dark:text-neutral-200">
+                <span>Points of interest overview</span>
+            </h2>
+        </div>
+
+        <div class="inline-flex gap-x-2">
+            <div class="text-center">
+                <a asp-controller="Poi"
+                   asp-action="PoiCreateForm"
+                   asp-route-mapId="@Model.MapId"
+                   class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-hidden focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-plus-icon lucide-plus shrink size-4"><path d="M5 12h14"/><path d="M12 5v14"/></svg>
+                    New Point Of Interest
+                </a>
+            </div>
+        </div>
+    </div>
 }
 
 @section Content
 {
-    <div class="flex flex-col">
-        <div class="-m-1.5 overflow-x-auto">
-            <div class="p-1.5 min-w-full inline-block align-middle">
-                <div class="border border-gray-200 rounded-lg overflow-hidden dark:border-neutral-700">
-                    <table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
-                        <thead>
-                            <tr>
-                                <th scope="col"
-                                    class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
-                                    Id
-                                </th>
-                                <th scope="col"
-                                    class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
-                                    Name
-                                </th>
-                                <th scope="col"
-                                    class="px-6 py-3 text-end text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
-                                    Action
-                                </th>
-                            </tr>
-                            </thead>
-                        <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
-                        @foreach (var poi in Model.Pois)
-                        {
-                            <tr>
-                                <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">
-                                    @poi.Id
-                                </td>
-                                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-neutral-200">
-                                    @poi.Name
-                                </td>
-                                <td class="px-6 py-4 whitespace-nowrap text-end text-sm font-medium">
-                                        <a asp-action="PoiUpdateForm"
-                                           asp-controller="Poi"
-                                           asp-route-mapId="@Model.MapId"
-                                           asp-route-id="@poi.Id"
-                                           class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 focus:outline-hidden focus:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400 dark:focus:text-blue-400">
-                                            Edit
-                                        </a>
+    <div class="max-w-10xl pt-2 px-4 sm:px-6 lg:px-6 lg:pt-2 mx-auto">
+        <div class="flex flex-col">
+            <div class="-m-1.5 overflow-x-auto">
+                <div class="p-1.5 min-w-full inline-block align-middle">
+                    <div class="border border-gray-200 rounded-lg overflow-hidden dark:border-neutral-700">
+                        <table class="min-w-full divide-y divide-gray-200 dark:divide-neutral-700">
+                            <thead>
+                                <tr>
+                                    <th scope="col"
+                                        class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
+                                        Id
+                                    </th>
+                                    <th scope="col"
+                                        class="px-6 py-3 text-start text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
+                                        Name
+                                    </th>
+                                    <th scope="col"
+                                        class="px-6 py-3 text-end text-xs font-medium text-gray-500 uppercase dark:text-neutral-500">
+                                        Action
+                                    </th>
+                                </tr>
+                                </thead>
+                            <tbody class="divide-y divide-gray-200 dark:divide-neutral-700">
+                            @foreach (var poi in Model.Pois)
+                            {
+                                <tr>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-800 dark:text-neutral-200">
+                                        @poi.Id
+                                    </td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800 dark:text-neutral-200">
+                                        @poi.Name
+                                    </td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-end text-sm font-medium">
+                                            <a asp-action="PoiUpdateForm"
+                                               asp-controller="Poi"
+                                               asp-route-mapId="@Model.MapId"
+                                               asp-route-id="@poi.Id"
+                                               class="inline-flex items-center gap-x-2 text-sm font-semibold rounded-lg border border-transparent text-blue-600 hover:text-blue-800 focus:outline-hidden focus:text-blue-800 disabled:opacity-50 disabled:pointer-events-none dark:text-blue-500 dark:hover:text-blue-400 dark:focus:text-blue-400">
+                                                Edit
+                                            </a>
 
-                                    <button type="button" class="inline-flex items-center gap-x-2 pl-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 focus:outline-hidden focus:text-red-800 disabled:opacity-50 disabled:pointer-events-none dark:text-red-500 dark:hover:text-red-400 dark:focus:text-red-400" aria-haspopup="dialog" aria-expanded="false" aria-controls="delete-alert-@poi.Id" data-hs-overlay="#delete-alert-@poi.Id">
-                                        Delete
-                                    </button>
-                                </td>
-                            </tr>
-                        }
-                        </tbody>
-                    </table>
+                                        <button type="button" class="inline-flex items-center gap-x-2 pl-2 text-sm font-semibold rounded-lg border border-transparent text-red-600 hover:text-red-800 focus:outline-hidden focus:text-red-800 disabled:opacity-50 disabled:pointer-events-none dark:text-red-500 dark:hover:text-red-400 dark:focus:text-red-400" aria-haspopup="dialog" aria-expanded="false" aria-controls="delete-alert-@poi.Id" data-hs-overlay="#delete-alert-@poi.Id">
+                                            Delete
+                                        </button>
+                                    </td>
+                                </tr>
+                            }
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    @foreach (
-        var deleteModal in Model.Pois.Select(poi => new LiveMapDashboard.Web.Models.Modal.DeleteModalViewModel
-            {
-                ModalId = $"delete-alert-{poi.Id}",
-                ModalTitle = $"Delete Point Of Interest: {poi.Name}",
-                FormMethod = "post",
-                FormController = "Poi",
-                FormAction = "Delete",
-                WarningMessage = "Permanently remove the point of interest and all of its contents from the map. This action is not reversible, so please continue with caution.",
-                DangerMessage = null,
-                HiddenInputs = new Dictionary<string, string>
+        @foreach (
+            var deleteModal in Model.Pois.Select(poi => new LiveMapDashboard.Web.Models.Modal.DeleteModalViewModel
                 {
-                    { "Id", poi.Id }
+                    ModalId = $"delete-alert-{poi.Id}",
+                    ModalTitle = $"Delete Point Of Interest: {poi.Name}",
+                    FormMethod = "post",
+                    FormController = "Poi",
+                    FormAction = "Delete",
+                    WarningMessage = "Permanently remove the point of interest and all of its contents from the map. This action is not reversible, so please continue with caution.",
+                    DangerMessage = null,
+                    HiddenInputs = new Dictionary<string, string>
+                    {
+                        { "Id", poi.Id }
+                    }
                 }
-            }
+            )
         )
-    )
-    {
-        @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_DeleteModal.cshtml", deleteModal)
-    }
+        {
+            @await Html.PartialAsync("~/Views/Shared/Components/PoiForm/_DeleteModal.cshtml", deleteModal)
+        }
+    </div>
 }
