fix: merge and add imageServer support

--- a/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/PoiForm/Default.cshtml
@@ -98,6 +98,7 @@
         <input type="hidden" asp-for="MapId" />
         <input type="hidden" asp-for="Coordinate.Latitude" />
         <input type="hidden" asp-for="Coordinate.Longitude" />
+        <input type="hidden" asp-for="Image" />
 
         <div>
             <div class="mb-6 border border-blue-500 p-4 rounded-lg">
