--- a/LiveMapDashboard.Web/Views/Shared/Layouts/_TabHorizontalLayout.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Layouts/_TabHorizontalLayout.cshtml
@@ -22,7 +22,7 @@
 }
 
 <div class="max-w-10xl px-4 pb-10 sm:px-6 lg:px-6 lg:pb-14 mx-auto">
-    <div class="flex flex-wrap">
+    <div class="grid">
         <div class="border-gray-200 dark:border-neutral-700">
             <nav class="flex gap-x-3" aria-label="Tabs" role="tablist" aria-orientation="horizontal">
                 @await RenderSectionAsync("VerticalTabButtons", required: false)
