--- a/LiveMapDashboard.Web/Views/Shared/Components/Dashboard/MapSwitcher.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/Dashboard/MapSwitcher.cshtml
@@ -2,44 +2,35 @@
 @model MapSwitcherViewModel
 
 <div role="option" tabindex="-1" aria-labelledby="hs-map-option-label">
-    <div class="relative">
-        <select
-            asp-for="MapId"
-            id="mapSelector"
-            onchange="navigateToSelectedMap()"
-            class="border peer p-4 pe-9 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:focus:ring-neutral-600
-              focus:pt-6
-              focus:pb-2
-              not-placeholder-shown:pt-6
-              not-placeholder-shown:pb-2
-              autofill:pt-6
-              autofill:pb-2"
-        >
-            @foreach ((string id, string name) in Model.Maps)
-            {
-                if (Model.MapId.Equals(id))
+    <div class="border border-gray-200 bg-white dark:bg-neutral-900 dark:border-neutral-700 p-4 rounded-lg">
+        <label for="mapSelector" class="block text-sm font-medium mb-2 dark:text-white">Select a park</label>
+        @if (Model.Maps.Any())
+        {
+            <select
+                id="mapSelector"
+                asp-for="MapId"
+                onchange="navigateToSelectedMap()"
+                class="py-3 px-2 pe-9 block w-full border border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
+            >
+                @foreach ((string id, string name) in Model.Maps)
                 {
-                    <option selected value="@id">
-                        @name
-                    </option>
+                    if (Model.MapId.Equals(id))
+                    {
+                        <option selected value="@id">
+                            @name
+                        </option>
+                    }
+                    else
+                    {
+                        <option value="@id">
+                            @name
+                        </option>
+                    }
                 }
-                else
-                {
-                    <option value="@id">
-                        @name
-                    </option>
-                }
-            }
-        </select>
-        <label class="absolute top-0 start-0 p-4 h-full truncate pointer-events-none transition ease-in-out duration-100 border border-transparent dark:text-white peer-disabled:opacity-50 peer-disabled:pointer-events-none
-            peer-focus:text-xs
-            peer-focus:-translate-y-1.5
-            peer-focus:text-gray-500 dark:peer-focus:text-neutral-500
-            peer-not-placeholder-shown:text-xs
-            peer-not-placeholder-shown:-translate-y-1.5
-            peer-not-placeholder-shown:text-gray-500 dark:peer-not-placeholder-shown:text-neutral-500 dark:text-neutral-500">
-            Switch park
-        </label>
+            </select>
+        } else {
+            <p class="text-sm text-gray-500 dark:text-neutral-400">No parks available.</p>
+        }
     </div>
     
     <script>
